18905
{code}
Welcome to Scala version 2.11.0-M8 (OpenJDK 64-Bit Server VM, Java 1.7.0_25).
Type in expressions to have them evaluated.
Type :help for more information.

scala> "abc"
res0: String = abc

scala> .length
res1: Int = 3

scala> scala> "abc"

// Detected repl transcript paste: ctrl-D to finish.

res0: String = abc

scala> .length
res1: Int = 3
// Replaying 2 commands from transcript.

scala> "abc"
res2: String = abc

scala> .length
<console>:1: error: illegal start of definition
       .length
       ^
{code}
